<resources>
	<string name="global_application_name">WiFi Tether</string>
	<string name="global_application_installed">Binaries and config-files installed!</string>
	<string name="global_application_error_restartsecwifi">Unable to restart secured wifi!</string>
	<string name="global_application_tethering_running"><![CDATA[UTethering is currently running ...]]></string>
	<string name="global_application_accesscontrol_disabled">AC disabled</string>
	<string name="global_application_accesscontrol_authorized">Authorized</string>
	<string name="global_application_accesscontrol_unauthorized">Unauthorized</string>
	<string name="global_application_connected">connected</string>
	<string name="main_activity_settings">Settings</string>
	<string name="main_activity_about">About</string>
	<string name="main_activity_donation_headline">Voluntary donate</string>
	<string name="main_activity_donate">Donate</string>
	<string name="main_activity_close">Close</string>
	<string name="main_activity_notroot">Not Root!</string>
	<string name="main_activity_nonetfilter">No Netfilter!</string>
	<string name="main_activity_noaccesscontrol">No Access Control!</string>
	<string name="main_activity_accesscontrol_disabled">Access-Control disabled.</string>
	<string name="setup_layout_category_wifi">Wifi</string>
	<string name="setup_layout_category_security">Security</string>
	<string name="setup_layout_category_shutdown">Automatic Shutdown Options</string>
	<string name="setup_layout_shutdown_timer">Shutdown Timer</string>
	<string name="setup_layout_shutdown_timer_summary">Stop tethering-service after a specified length of time.</string>
	<string name="setup_layout_shutdown_timer_unit_minutes">minutes</string>
	<string name="setup_layout_shutdown_timer_dialog_elapsed"><![CDATA[Shutdown after ... minutes have elapsed.]]></string>
	<string name="setup_layout_shutdown_timer_limit">Set timer</string>
	<string name="setup_layout_shutdown_timer_limit_summary">Configure the length of time before shutdown.</string>
	<string name="setup_layout_shutdown_inactive">Idle Shutdown</string>
	<string name="setup_layout_shutdown_inactive_summary">Stop tethering-service after a specified time of inactivity</string>
	<string name="setup_layout_shutdown_inactive_unit_minutes">minutes</string>
	<string name="setup_layout_shutdown_inactive_dialog_idletime"><![CDATA[Shutdown after ... of inactivity.]]></string>
	<string name="setup_layout_shutdown_inactive_idle_time">Set idle limit</string>
	<string name="setup_layout_shutdown_inactive_idle_summary">Configure the idle-time.</string>
	<string name="setup_layout_category_keepalive">Keep Alive - Connection Checker</string>
	<string name="setup_layout_keepalive_title">Keep Alive - Connection Checking</string>
	<string name="setup_layout_keepalive_summary">This option will regularly connect to a webserver and download a small amount of data at a user specified interval to verify your connection, if it fails you will be notified.</string>
	<string name="setup_layout_keepalive_websites_manual">Websites to check for keep-alive</string>
	<string name="setup_layout_keepalive_websites_default">www.google.com;www.yahoo.com;www.bing.com</string>
	<string name="setup_layout_keepalive_websites_manualsummary">Enter a list of valid HTTP servers separated by semi-colons. Leave blank to restore default values.</string>
	<string name="setup_layout_keepalive_interval_manual">Keep-Alive check interval</string>
	<string name="setup_layout_keepalive_interval_manualsummary">Configure delay in minutes between keep-alive request if last attempt was successful.</string>
	<string name="setup_layout_keepalive_intervalshutdown_manual">Keep-Alive failed retry period</string>
	<string name="setup_layout_keepalive_intervalshutdown_manualsummary">Configure delay in minutes between keep-alive\'s first failed request and tether shutdown.</string>
	<string name="setup_layout_keepalive_option">Keep-Alive Failure Options</string>
	<string name="setup_layout_keepalive_optionsummary">Configure keep-alive failure options. Retry with no limit or retry until set time limit is reached then shutdown tether connection.</string>
	<string name="setup_layout_quotashutdown_title">Quota Shutdown Limit</string>
	<string name="setup_layout_quotashutdown_summary">Stop tethering-service after a specified data usage quota.</string>
	<string name="setup_layout_quotashutdown_limit_manual">Set quota limit (in MB)</string>
	<string name="setup_layout_quotashutdown_limit_manualsummary">Manually set the quota. Value is in MB between 1MB and 999,999,999MB.</string>
	<string name="setup_layout_category_lan">LAN</string>
	<string name="setup_layout_category_notifications">Notifications</string>
	<string name="setup_layout_category_misc">Miscellaneous</string>
	<string name="setup_layout_wifiencryption">Enable WiFi-Encryption</string>
	<string name="setup_layout_wifiencryption_summary">Turn on wifi-encrytion</string>
	<string name="setup_layout_encryptionsetup">Encryption setup method</string>
	<string name="setup_layout_encryptionsetup_summary">Change WiFi-Ecryption setup method</string>
	<string name="setup_layout_devicetype">Change Device-Profile</string>
	<string name="setup_layout_devicetype_summary">Change Device-Profile</string>
	<string name="setup_layout_devicetype_dialog_title">Device-Profile</string>
	<string name="setup_layout_setupmethod">Change Setup-Method</string>
	<string name="setup_layout_setupmethod_summary">Change Setup-Method</string>
	<string name="setup_layout_setupmethod_dialog_title">Setup-Method</string>
	<string name="setup_layout_passphrase">Change Passphrase</string>
	<string name="setup_layout_passphrase_summary">Change Passphrase for WiFi-Encryption</string>
	<string name="setup_layout_passphrase_dialog_title">Enter Passphrase</string>
	<string name="setup_layout_ssid">Change SSID</string>
	<string name="setup_layout_ssid_summary">Change SSID</string>
	<string name="setup_layout_ssid_dialog_title">Enter SSID</string>
	<string name="setup_layout_ssid_dialog_message">Only alpha-numeric characters and \'.\', \'_\' allowed!</string>
	<string name="setup_layout_hidessid">Hide SSID</string>
	<string name="setup_layout_hidessid_summary">Don\'t broadcast the SSID</string>
	<string name="setup_layout_channel">Change Channel</string>
	<string name="setup_layout_channel_summary">Wireless frequency channel</string>
	<string name="setup_layout_channel_dialog_title">Select Channel</string>
	<string name="setup_layout_txpower">Transmit Power</string>
	<string name="setup_layout_txpower_summary">Reduce transmit power</string>
	<string name="setup_layout_txpower_dialog_title">Reduce Power</string>
	<string name="setup_layout_dontdisablebt">Don\'t disable Bluetooth</string>
	<string name="setup_layout_dontdisablebt_summary">Don\'t disable Bluetooth on tether-start</string>
	<string name="setup_layout_driverreload">WiFi-driver reload</string>
	<string name="setup_layout_driverreload_summary">Force WiFi-driver reloading inside tether script</string>
	<string name="setup_layout_accesscontrol">Enable Access-Control</string>
	<string name="setup_layout_accesscontrol_summary">Turn on access-control</string>
	<string name="setup_layout_lan">Change LAN</string>
	<string name="setup_layout_lan_summary">LAN network settings</string>
	<string name="setup_layout_lan_dialog_title">Select LAN-Network</string>
	<string name="setup_layout_category_dns">Domain-Nameserver</string>
	<string name="setup_layout_dnsprimary">Change preferred DNS</string>
	<string name="setup_layout_dnsprimary_summary">Change preferred DNS</string>
	<string name="setup_layout_dnsprimary_dialog_title">Preferred Domain-Nameserver</string>
	<string name="setup_layout_dnsprimary_dialog_message">Use the following DNS server address:</string>
	<string name="setup_layout_dnssecondary">Change alternate DNS</string>
	<string name="setup_layout_dnssecondary_summary">Change alternate DNS</string>
	<string name="setup_layout_dnssecondary_dialog_title">Alternate Domain-Nameserver</string>
	<string name="setup_layout_dnssecondary_dialog_message">Use the following DNS server address:</string>
	<string name="setup_layout_mssclamping">MSS clamping</string>
	<string name="setup_layout_mssclamping_summary">Enable MSS clamping</string>
	<string name="setup_layout_routingfix">Routing fix</string>
	<string name="setup_layout_routingfix_summary">Enable Routing-fix</string>
	<string name="setup_layout_notification">Client Notification Mode</string>
	<string name="setup_layout_notification_summary">Client Notification Mode settings</string>
	<string name="setup_layout_notification_dialog_title">Select Client Notification Mode</string>
	<string name="setup_layout_vibrate">Vibrate on connect</string>
	<string name="setup_layout_vibrate_summary">Vibrate when a client connects</string>
	<string name="setup_layout_ringtone">Notification Ringtone</string>
	<string name="setup_layout_ringtone_summary">Ringtone to use with notifications</string>
	<string name="setup_layout_updatecheck">Disable Update-Check</string>
	<string name="setup_layout_updatecheck_summary">Turn off update-check at startup</string>
	<string name="setup_layout_enable4gpref">Enable 4G Mobile network</string>
	<string name="setup_layout_enable4gpref_summary">Enable 4G network after tethering-start</string>
	<string name="setup_layout_wakelock">Disable Wake-Lock</string>
	<string name="setup_layout_wakelock_summary">Turn off wake-lock while tethering</string>
	<string name="setup_layout_battery">Battery Temperature</string>
	<string name="setup_layout_battery_summary">Configure battery temperature info</string>
	<string name="about_layout_version">Version:</string>
	<string name="about_layout_projecthome">Project-Home:</string>
	<string name="about_layout_license">License:</string>
	<string name="about_layout_authors">Authors:</string>
	<string name="about_layout_contributors">Contributors:</string>
	<string name="about_layout_software">3rd-Party-Software:</string>
	<string name="about_changelog_software">Changelog:</string>
	<string name="about_changelog_detail">\n
	    v3.3-beta2 - 06/10/2013:\n\t\t1. Fixed widget-support. \n\n
	    v3.3-beta1 - 06/03/2013:\n\t\t1. Cleanups. \n\n
	    v3.3-pre3 - 06/03/2013:\n\t\t1. Added Samsung GS4 support. Includes updated ifconfig built by <a href="http://www.ziggy471.com/">Ziggy471</a> \n\n
	    v3.3-pre2 - 12/20/2012:\n\t\t1. Added WiFi AP MAC address Spoofing. \n\n
	    v3.3-pre1 - 11/03/2012:\n\t\t1. Added Samsung GS3 netd(ndc) modes. \n\n
		v3.2-beta1 - 08/20/2012:\n\t\t1. Enhanced support for ICS/JB (Google Galaxy Nexus, Google Nexus S, Motorola Razr, ...). Added new setup-method called \"netd-ndc\".\n\n
		v3.2-pre1 - 06/14/2012:\n\t\t1. Added HTC Rezound (Vigor) infrastructure support. 2. Added countdown timer for existing automatic idle shutdown. 3. Added session quota (1MB - 999,999,999MB) and automatic quota shutdown support. 4. Added changelog to bottom of about box. 5. Increased maximum idle time for auto shutdown to 120 minutes. 6. Added keep-alive option to keep connection alive and notify user of network issues, included options to continue retrying or shutdown tether if keep-alive servers continue to not respond. 7. Added new credit for aforementioned work to Joshua Briefman. 8. Added standard countdown timer, will shutdown tether after a user selected amount of time has passed. 9. German translations for above changes by Harald Müller.\n\n
		v3.1-beta14 - 04/22/2012:\n\t\tBugfix: Stopping tether using trackball didn\'t work.\n\n
		v3.1-beta13 - 04/20/2012:\n\t\t1. Start/stop-image is now a image-button. 2. Start/stop-image is now a image-button.\n\n
		v3.1-beta12 - 04/09/2012:\n\t\t1. Added support for Galaxy S2 (ICS). 2. Added an generic ics-profile which might work on different devices. (You have to select this profile - called Generic ICS - manually in app-stettings under Device profile.).\n\n
	</string>
</resources>